# ai-chatbot

./: .dockerignore  .gitignore  Dockerfile  Readme.md  docker-compose-production.yml  docker-compose.yml  pyproject.toml  requirements.txt
app/: chatbot.py  config.py  logger.py  main.py  profile_store.py  vectorizer.py  weaviate_client.py  website_loader.py
app/parsing/: contact_hours.py  menu_struct.py  pdf_image.py
app/verticals/: detect.py  restaurant.py
config/: application.yml  llm_config.yml
nginx/: nginx.conf
